--- a/dev/config/loader.conf
+++ b/dev/config/loader.conf
@@ -1,7 +1,12 @@
 [main]
-archive_file = ../../sources/raw/2016-Sep-09_csv.tar.gz
-extract_dir = ../../sources/processed/2016-Sep-09_csv/
-database_file = ../../sources/processed/2016-Sep-09.db
+database_file = ../../sources/processed/2016-Dec-05.db
+diff_database_file = ../../sources/processed/2016-Dec-05_diff.db
+nl_archive_file = ../../sources/raw/2016-Dec-05_nl.tar.gz
+nl_extract_dir = ../../sources/processed/2016-Dec-05_nl/
+nl_database_file = ../../sources/processed/2016-Dec-05_nl.db
+csv_archive_file = ../../sources/raw/2016-Sep-09_csv.tar.gz
+csv_extract_dir = ../../sources/processed/2016-Sep-09_csv/
+csv_database_file = ../../sources/processed/2016-Sep-09_csv.db
 
 [config]
 test = ../config/test.conf
