--- a/dev/config/loader.conf
+++ b/dev/config/loader.conf
@@ -7,6 +7,7 @@ nl_database_file = ../../sources/processed/2016-Dec-05_nl.db
 csv_archive_file = ../../sources/raw/2016-Sep-09_csv.tar.gz
 csv_extract_dir = ../../sources/processed/2016-Sep-09_csv/
 csv_database_file = ../../sources/processed/2016-Sep-09_csv.db
+crawl_extract_dir = ../../sources/processed/2016-Dec-12_crawl/
 
 [config]
 test = ../config/test.conf
