parsing json into sql relations (WIP)

--- a/notes/working/features.yaml
+++ b/notes/working/features.yaml
@@ -1,1 +1,64 @@
-features.yaml
+
+num_current_employees:
+num_members:
+num_founders:
+num_board:
+num_degrees_founders:
+num_experience_founders:
+has_founder_mba:
+has_founder_phd:
+num_prev_startups_founders:
+has_research_alliance:
+has_sales_alliance:
+num_mentions_techcrunch:
+num_mentions_any:
+has_social_media_any:
+has_social_media_facebook:
+has_social_media_twitter:
+num_followers_angellist:
+num_followers_twitter:
+num_likes_facebook:
+num_tweets_twitter:
+has_patent_pending:
+has_patent_granted:
+num_patent_applications:
+num_patent_granted:
+has_rnd_internal:
+has_rnd_transferred:
+has_received_award:
+has_received_grant:
+has_investment_any:
+has_investment_seed:
+has_investment_a:
+has_investment_b:
+has_investment_c:
+has_investment_d:
+has_investment_e:
+has_investment_pe:
+has_ipo:
+num_investment_rounds:
+num_investments:
+num_investors_total:
+num_investors_seed:
+num_investors_a:
+num_followers_investors_angellist:
+num_coinvestors_investors:
+num_centrality_investors:
+num_investment_value_any:
+num_investment_value_seed:
+num_investment_value_a:
+num_investment_value_b:
+num_investment_value_c:
+num_investment_value_d:
+num_investment_value_e:
+num_investment_value_pe:
+num_investment_value_ipo:
+num_years_old:
+has_profitability:
+num_snp_close:
+type_year_founded:
+type_industry_sector:
+has_industry_sector_new:
+num_competitors:
+type_hq_location:
+has_hq_location_large:
