--- a/dev/.gitignore
+++ b/dev/.gitignore
@@ -37,6 +37,9 @@ $RECYCLE.BIN/
 # Config files #
 *.conf
 
+.*
+!.gitignore
+
 # =========================
 # Operating System Files
 # =========================
