--- a/dev/package/config/_logger.yaml
+++ b/dev/package/config/_logger.yaml
@@ -24,7 +24,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: INFO
         formatter: file_fmt
-        filename: "logs/info.log"
+        filename: "info.log"
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -33,7 +33,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
         formatter: file_fmt
-        filename: "logs/error.log"
+        filename: "error.log"
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
