--- a/dev/.gitignore
+++ b/dev/.gitignore
@@ -69,3 +69,34 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+
+# Latex config files
+
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.tex.backup
+*.bcf
+*.run.xml
+*.sh
+*.bst
