getting close to finishing coding (hopefully)

--- a/dev/package/analysis/config/experiments/16.yaml
+++ b/dev/package/analysis/config/experiments/16.yaml
@@ -10,12 +10,12 @@ n_jobs: 1
 verbosity: 1
 
 ##Forecast
-forecast_windows: [2, 3, 4] # Evaluation - Predictive Power
+forecast_windows: [2, 3] # Evaluation - Predictive Power
 
 ##Master Database
 master_path: "analysis/input/master.db"
 master_end_date: !!python/object/new:datetime.date [2016, 9, 9]
-master_start_date: !!python/object/new:datetime.date [2012, 1, 1]
+master_start_date: !!python/object/new:datetime.date [2013, 1, 1]
 master_feature_config: "analysis/config/master_feature.sql"
 master_label_config: "analysis/config/master_label.sql"
 master_merge_config: "analysis/config/master_merge.sql"
@@ -133,7 +133,7 @@ evaluate_pipeline_flag: True
 ##Custom
 pipeline_criteria_evaluate: "PRC"
 model_criteria_evaluate: "F1"
-time_slices_evaluate: 3 # Evaluation - Robustness
+time_slices_evaluate: 2 # Evaluation - Robustness
 max_observations_evaluate: !!null #Evaluation - Efficiency
 load_prev_files_evaluate: True
 output_folder_evaluate: &output_evaluate !join [*output, "evaluate/"]
@@ -141,6 +141,9 @@ output_slices_path_evaluate: !join [*output_evaluate, "stored_slices.pkl"]
 output_log_evaluate: !join [*output_evaluate, "log_results.pkl"]
 
 ##Specific
+no_extractor: True
+feature_stages: [!!null ] #["Pre-Seed", "Seed", "Series A", "Series B", "Series C", "Series D+"]
+label_types: ["Acquisition", "IPO", "Exit", "Extra_Round", "Extra_Stage"]
 test_path: "analysis/input/test.db"
 test_date: !!python/object/new:datetime.date [2017, 4, 4]
 test_feature_config: "analysis/config/master_feature.sql"
